# orthpol

./: .gitignore  CMakeLists.txt  README.md
legacy/: Makefile  Makefile_old  README  d1mach.f  gauss.f  r1mach.f  test1.f  test1.out  test10.f  test10.out  test11.f  test11.out  test2.f  test2.out  test3.f  test3.out  test4.f  test4.out  test5.f  test5.out  test6.f  test6.out  test7.f  test7.out  test8.f  test8.out  test9.f  test9.out
src/: CMakeLists.txt  dgchri.f  dkern.f  dknum.f  nu0her.f90  nu0jac.f  nu0jac.f90  nu0lag.f  nu0lag.f90  orthpol.f90  scheb.f  scheb.f90  schri.f  schri.f90  sgauss.f  sgauss.f90  sgchri.f  sgchri.f90  skern.f  skern.f90  sknum.f  sknum.f90  slancz.f  slancz.f90  slob.f  slob.f90  smccheb.f  smccheb.f90  smcdis.f  smcdis.f90  sqgp.f  sqgp.f90  sradau.f  sradau.f90  srecur.f  srecur.f90  ssti.f
tests/: CMakeLists.txt  test1.f  test10.f  test11.f  test2.f  test3.f  test4.f  test5.f  test6.f  test7.f  test8.f  test9.f
